2025-11-18  Saruman the White  <eker@eker10>

	* associativeSymbol.cc (AssociativeSymbol::associativeSortCheck):
	give more detailed warning message
	(AssociativeSymbol::associativeCtorCheck): deleted #if'd out old
	version
	(AssociativeSymbol::associativeCtorCheck): give a more detailed
	warning message
	(AssociativeSymbol::associativeCtorCheck): fix grammatical error
	in old message

	* binarySymbol.cc (BinarySymbol::commutativeSortCompletion): more
	code cleaning
	(BinarySymbol::commutativeSortCompletion): don't treat ctors as
	being more general than non-ctors - probably not a bug since any
	ctor acting as the commutative completion of a non-ctor will need
	its own commutative completion so a problem would show up
	somewhere. However doing the obvious equality check instead, it is
	easy to see ascorrect even though it will be slightly less
	efficient in some cases

2025-11-12  Saruman the White  <eker@eker10>

	* binarySymbol.cc (BinarySymbol::commutativeSortCompletion): clean
	up code; add comments

2025-01-11  Saruman the White  <eker@eker10>

	* symbol.hh (class Symbol): derive from EqRewriter

2024-06-07  Steven M. Eker  <eker@eker10>

	* dagNode.hh (class DagNode): added dummy operator delete() to
	avoid -Wmismatched-new-delete warning with g++

===================================Maude163=========================================

2024-03-05  Steven Eker  <eker@pup>

	* term.hh (class Term): make arguments() const

===================================Maude158=========================================

2024-01-19  Steven Eker  <eker@pup>

	* dagNode.cc (DagNode::reducibleByVariantEquation): don't check
	nonexec variant equations

2024-01-16  Steven Eker  <eker@pup>

	* symbol.cc (Symbol::stackArguments): added respectUnstackable arg
	(Symbol::stackPhysicalArguments): added respectUnstackable arg

	* symbol.hh (class Symbol): added respectUnstackable arg to
	decls for stackArguments() and stackPhysicalArguments(); remove
	default arguments
