@@ -1,3 +1,14 @@
+2026-01-06  Saruman the White  <eker@eker10>
+
+	* variableSymbol.hh (class VariableSymbol): added decl for
+	eqRewriteStandardStrategy()
+
+	* variableSymbol.cc (VariableSymbol::VariableSymbol): call
+	setEqRewrite()
+	(VariableSymbol::eqRewriteStandardStrategy): added
+
+===================================Maude165===========================================
+
 2024-03-12  Steven Eker  <eker@pup>
 
 	* variableDagNode.hh (class VariableDagNode): deleted old
