@@ -1,3 +1,10 @@
+2026-01-06  Saruman the White  <eker@eker10>
+
+	* dagNode.hh (DagNode::reduce): added version that uses
+	eqRewrite2()
+
+===================================Maude165===========================================
+
 2025-11-18  Saruman the White  <eker@eker10>
 
 	* associativeSymbol.cc (AssociativeSymbol::associativeSortCheck):
